--- a/app/src/main/res/layout/activity_main_appbar.xml
+++ b/app/src/main/res/layout/activity_main_appbar.xml
@@ -18,7 +18,8 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/container">
         </FrameLayout>
 
         <fragment
