--- a/app/src/main/res/layout/activity_videos.xml
+++ b/app/src/main/res/layout/activity_videos.xml
@@ -32,7 +32,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleLarge" />
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
 
         </RelativeLayout>
 
